# project_euler_lib

./: README.md  pyproject.toml
src/project_euler_lib/fib/: f.py
src/project_euler_lib/palindrome/: is_palindrome.py
src/project_euler_lib/primes/: is_prime_slow.py  sieve.py
