[project]
name = "project-euler-lib"
version = "0.1.0"
description = "Reusable math/number theory library for Project Euler"
authors = [{ name = "Jon", email = "jon@misprint.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.16.1",
    "numpy>=2.2.6",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
